--- a/libcxx/modules/std.cppm.in
+++ b/libcxx/modules/std.cppm.in
@@ -72,6 +72,7 @@ module;
 #endif
 #include <functional>
 #include <future>
+#include <hive>
 #include <initializer_list>
 #if _LIBCPP_HAS_LOCALIZATION
 #  include <iomanip>
